--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
