--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-jwt": "^1.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
